load fonts over https

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="index.css" />
 
     <!-- FONTS -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   </head>
   <body>
 
