add screenshot assets

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       <h1 data-translation="hero-statement" class="ui header">
         Quickly Develop Stunning Native Desktop Apps with JavaScript
       </h1>
-      <p data-translation="hero-followup">
+      <p data-translation="hero-followup" class="hero-subheader">
         Tint compiles beautiful and unique applications for MacOS X and Windows using HTML5, CSS3, JavaScript and an advanced JS-based API.
       </p>
 
@@ -27,13 +27,18 @@
 
       <div class="ui two column centered grid">
         <div class="column">
-          <form class="ui transparent form" action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post" target="_blank">
+
+          <div class="ui blue inverted segment text-centered">
+            Tint 2 Pro is currently under development. <i>Want to know when it's released?</i> Enter your email below.
+          </div>
+
+          <form class="ui transparent form" action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post">
             <div class="field">
               <input placeholder="What's Your Email Address?" name="EMAIL" type="email">
               <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
               <div style="position: absolute; left: -5000px;"><input type="text" name="b_e391b19fb3571d83a42f97c8c_1402e2970a" tabindex="-1" value=""></div>
             </div>
-            <div class="ui green submit button">Submit</div>
+            <div class="ui green submit button large">Submit</div>
           </form>
         </div>
       </div>
@@ -44,24 +49,51 @@
 
       <!-- CSS + HTML + JS = Win and/or OsX -->
 
-      <div class="ui five column grid centered">
+      <!--       <div class="ui five column grid centered">
+      <div class="column">
+      <img class="ui small image" alt="" src="js.png"/>
+      </div>
+      <div class="column">
+      <img class="ui small image" alt="" src="css3.gif"/>
+      </div>
+      <div class="column">
+      <img class="ui small image" alt="" src="html5.gif"/>
+      </div>
+      </div> -->
+      <div class="ui five column grid centered stackable">
         <div class="column">
-          <img class="ui small image" alt="" src="js.gif"/>
+          <img class="lang-img" alt="" src="js.png"/>
+          <img class="ui large image" alt="" src="js-screenshot.png"/>
         </div>
         <div class="column">
-          <img class="ui small image" alt="" src="css3.gif"/>
+          <img class="lang-img" alt="" src="html5.gif"/>
+          <img class="ui large image" alt="" src="html-screenshot.png"/>
         </div>
         <div class="column">
-          <img class="ui small image" alt="" src="html5.gif"/>
+          <img class="lang-img" alt="" src="css3.gif"/>
+          <img class="ui large image" alt="" src="css-screenshot.png"/>
         </div>
       </div>
 
-      <div class="ui five column grid centered">
+      <div class="ui two column grid centered">
         <div class="column">
-          <img class="ui small image" alt="" src="app-store.png"/>
+          <div class="ui horizontal divider"> Compiles To </div>
         </div>
+      </div>
+
+      <!-- <div class="ui five column grid centered"> -->
+      <!--   <div class="column"> -->
+      <!--     <img class="ui small image" alt="" src="app-store.png"/> -->
+      <!--   </div> -->
+      <!--   <div class="column"> -->
+      <!--     <img class="ui small image" alt="" src="windows-app.png"/> -->
+      <!--   </div> -->
+      <!-- </div> -->
+
+
+      <div class="ui three column padded grid centered stackable">
         <div class="column">
-          <img class="ui small image" alt="" src="windows-app.png"/>
+          <img class="ui image tint-screenshot" alt="" src="tint-screenshot.png"/>
         </div>
       </div>
 
