cleanup and optimize images

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <!-- Hero -->
     <div class="ui basic segment hero">
-      <img id="wordmark" src="tint-wordmark.svg" />
+      <img id="wordmark" src="images/tint-wordmark.svg" />
       <h1 data-translation="hero-statement" class="ui header">
         Quickly Develop Stunning Native Desktop Apps with JavaScript
       </h1>
@@ -52,18 +52,18 @@
       <div class="ui grid centered stackable">
 
         <div class="four wide column">
-          <img class="lang-img" alt="" src="js.png"/>
-          <img class="ui large image" alt="" src="js-screenshot.png"/>
+          <img class="lang-img" alt="" src="images/js.png"/>
+          <img class="ui large image" alt="" src="images/js-screenshot.png"/>
         </div>
 
         <div class="four wide column">
-          <img class="lang-img" alt="" src="html5.gif"/>
-          <img class="ui large image" alt="" src="html-screenshot.png"/>
+          <img class="lang-img" alt="" src="images/html5.png"/>
+          <img class="ui large image" alt="" src="images/html-screenshot.png"/>
         </div>
 
         <div class="four wide column">
-          <img class="lang-img" alt="" src="css3.gif"/>
-          <img class="ui large image" alt="" src="css-screenshot.png"/>
+          <img class="lang-img" alt="" src="images/css3.png"/>
+          <img class="ui large image" alt="" src="images/css-screenshot.png"/>
         </div>
 
         <div class="ten wide column">
@@ -75,7 +75,7 @@
 
     <div class="ui three column padded grid centered stackable">
       <div class="column">
-        <img class="ui image tint-screenshot" alt="" src="tint-screenshot.png"/>
+        <img class="ui image tint-screenshot" alt="" src="images/tint-screenshot.png"/>
       </div>
     </div>
 
@@ -158,7 +158,8 @@
             Are there any example apps?
           </div>
           <div class="content">
-            <p></p>
+            <p>There is an introduction to Tint in the Getting Started section of the documents and many examples through out the documentation of how to use the API.</p>
+            <p>If you have an app you've built and would like to show it off, let us know. We'd love to showcase it!</p>
           </div>
         </div>
       </div>
@@ -173,7 +174,7 @@
             <div class="ui item">
               <div class="ui tiny image">
                 <a href="https://github.com/trueinteractions/tint2" target="_blank">
-                  <img alt="github logo" src="octo-cat.png"/>
+                  <img alt="github logo" src="images/octo-cat.png"/>
                 </a>
               </div>
               <div class="content">
@@ -197,7 +198,7 @@
             <div class="ui item">
               <div class="ui tiny image">
                 <a href="https://www.trueinteractions.com/docs/" target="_blank">
-                  <img alt="documentation" src="open-book.png"/>
+                  <img alt="documentation" src="images/open-book.png"/>
                 </a>
               </div>
               <div class="content">
