--- a/public/index.html
+++ b/public/index.html
@@ -224,12 +224,12 @@
               </div>
               <div class="content">
                 <h2 class="ui header">
-                  <a href="https://www.trueinteractions.com/tint2/docs/" target="_blank">
+                  <a href="https://www.trueinteractions.com/docs/" target="_blank">
                     TintAPI - Docs &amp; Examples
                   </a>
                 </h2>
                 <div class="description">
-                  <p>Browse through Tint's Javascript API, find overviews, examples and a <a href="https://www.trueinteractions.com/tint2/docs/tutorial-gettingstarted.html" target="_blank">30-second getting started guide</a>.</p>
+                  <p>Browse through Tint's Javascript API, find overviews, examples and a <a href="https://www.trueinteractions.com/docs/tutorial-gettingstarted.html" target="_blank">30-second getting started guide</a>.</p>
                 </div>
               </div>
             </div>
