--- a/public/index.html
+++ b/public/index.html
@@ -272,9 +272,18 @@
     </footer>
 
     <!-- SCRIPTS -->
-    <script src=""> </script>
     <script src="vendor/jquery/jquery-2.1.3.min.js"></script>
     <script src="vendor/semantic-ui/semantic.min.js"></script>
     <script src="index.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-42582973-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
